# xapp-monitoring

./: .gitignore  5g-infrastructure.service.template  5g.yaml  README.md  SETUP-README.md  destroy-oai-flexric.yaml  install-autostart.sh  merge_metrics.py  quick-start.sh  setup-5g-infrastructure.sh  start-collection.sh  start_5g.sh
cell-report/: Abstract.tex  Introduction.tex  main.tex  page-de-garde.tex
cell_xapp_monitor/: README.md  analyze_dataset.py  cell_dataset_collector.py  cell_kpm_xapp.py  cell_xapp_monitor.py  config.yaml  run_experiment.sh
flexric_xapp/: CMakeLists.txt  METRICS_DOCUMENTATION.md  analyze_dataset.py  build_and_deploy.sh  kpm_dataset.csv  kpm_dataset_v2.csv  xapp_kpm_metrics_collector.c  xapp_kpm_metrics_collector_v2.c
kpm_xapp/: kpm_dataset_collector.py
xapp-dataset/: collect_kpm_data.sh  dataset_full_20260112_150607.csv  dataset_full_20260112_151024.csv  dataset_full_20260112_151414.csv  dataset_full_20260112_151607.csv  dataset_full_20260112_151646.csv  dataset_full_20260112_151812.csv  dataset_full_20260112_152113.csv  dataset_full_20260112_155032.csv  dataset_full_20260112_163749.csv  gnb_logs_20260112_150607.txt  gnb_logs_20260112_151024.txt  gnb_logs_20260112_151414.txt  gnb_logs_20260112_151607.txt  gnb_logs_20260112_151646.txt  gnb_logs_20260112_151812.txt  gnb_logs_20260112_152113.txt  kpm_data_collector.py  kpm_metrics_20260112_150607.csv  kpm_metrics_20260112_151024.csv  kpm_metrics_20260112_151414.csv  kpm_metrics_20260112_151607.csv  kpm_metrics_20260112_151646.csv  kpm_metrics_20260112_151812.csv  parse_kpm_log.py  (+3 more)
(+39 files in other folders)
